--- a/RemoteController/RemoteController/Resources/Views/All.xaml
+++ b/RemoteController/RemoteController/Resources/Views/All.xaml
@@ -5,5 +5,6 @@
 
         <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Views/PageButton.xaml" />
         <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Views/OverviewPageView.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Views/PathsManagerView.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
