--- a/RemoteController/RemoteController/Resources/Views/PathsManagerView.xaml
+++ b/RemoteController/RemoteController/Resources/Views/PathsManagerView.xaml
@@ -65,27 +65,65 @@
                     ItemTemplate="{StaticResource PathViewModel.DataTemplate}"
                     Margin="4" />
 
-                <DockPanel 
-                    Margin="0 16 0 0"
-                    LastChildFill="True">
+                <Grid Margin="0 12 0 0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
                     <TextBlock 
-                        DockPanel.Dock="Left"
+                        Grid.Column="0"
+                        Grid.Row="0"
+                        Width="40"
                         VerticalAlignment="Center"
                         Text="Name: " />
-                    <Button
-                        DockPanel.Dock="Right"
-                        Content="Add path"
+                    <TextBlock 
+                        Grid.Column="0"
+                        Grid.Row="1"
+                        Width="40"
                         VerticalAlignment="Center"
-                        Style="{StaticResource Button.Primary}"
-                        Command="{Binding AddPathCommand}"
-                        />
+                        Text="Path: " />
+
                     <TextBox 
-                        DockPanel.Dock="Left"
-                        Margin="8 0"
+                        Grid.Column="1"
+                        Grid.Row="0"
+                        Height="24"
+                        Margin="0 0 0 0"
                         VerticalContentAlignment="Center"
                         VerticalAlignment="Stretch"
-                        Text="{Binding NewPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                </DockPanel>
+                        Text="{Binding NameForNew, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+
+                    <Button
+                        Grid.Column="1"
+                        Grid.Row="1"
+                        Height="24"
+                        Padding="4 0"
+                        Background="White"
+                        Foreground="Black"
+                        HorizontalContentAlignment="Left"
+                        VerticalContentAlignment="Center"
+                        Command="{Binding SelectPathCommand}"
+                        Content="{Binding PathForNew, TargetNullValue='Browse...'}"
+                        />
+
+                    <Button
+                        Grid.Column="2"
+                        Grid.Row="0"
+                        Grid.RowSpan="2"
+                        Margin="4 0 0 0"
+                        Command="{Binding AddPathCommand}"
+                        Style="{StaticResource Button.Primary}">
+                        <e:SymbolMaterial
+                            FontSize="32"
+                            Icon="PlayArrow"
+                            />
+                    </Button>
+                </Grid>
             </StackPanel>
         </ScrollViewer>
     </ControlTemplate>
