--- a/RemoteController/RemoteController/Resources/Generic/Converters.xaml
+++ b/RemoteController/RemoteController/Resources/Generic/Converters.xaml
@@ -14,4 +14,6 @@
                            TrueVisibility="Collapsed"
                            FalseVisibility="Visible"
                            NullVisibility="Visible"/>
+
+    <c:EnumToDescriptionConverter x:Key="Converter.EnumToDescription" />
 </ResourceDictionary>
