Renamed enum PagePriority to PageName and usage property from Priority to Name.

--- a/RemoteController/RemoteController/Resources/Views/PageButton.xaml
+++ b/RemoteController/RemoteController/Resources/Views/PageButton.xaml
@@ -31,7 +31,7 @@
 
         <TextBlock 
             Grid.Column="1"
-            Text="{Binding Priority, Converter={StaticResource Converter.EnumToDescription}}"
+            Text="{Binding Name, Converter={StaticResource Converter.EnumToDescription}}"
             VerticalAlignment="Center"
             HorizontalAlignment="Left"/>
 
