--- a/RemoteController/RemoteController/Resources/Styles/ButtonStyle.xaml
+++ b/RemoteController/RemoteController/Resources/Styles/ButtonStyle.xaml
@@ -17,6 +17,7 @@
                 HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                 VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                 ContentStringFormat="{TemplateBinding ContentStringFormat}"
+                ContentTemplate="{TemplateBinding ContentTemplate}"
                 RecognizesAccessKey="True" />
         </Border>
     </ControlTemplate>
