Created UI for commands. Created generic resource Sizes.

--- a/RemoteController/RemoteController/Resources/Generic/All.xaml
+++ b/RemoteController/RemoteController/Resources/Generic/All.xaml
@@ -3,6 +3,7 @@
 
         <!--Here are listed all generic resources only.-->
 
+        <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Generic/Sizes.xaml" />
         <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Generic/Colors.xaml" />
         <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Generic/Converters.xaml" />
         <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Generic/Images.xaml" />
