--- a/RemoteController/RemoteController/Resources/Views/CommandsPageView.xaml
+++ b/RemoteController/RemoteController/Resources/Views/CommandsPageView.xaml
@@ -17,7 +17,88 @@
     </d:FrameworkElement.DataContext>
 
     <DataTemplate x:Key="CommandViewModel.DataTemplate" DataType="vm:CommandViewModel">
-        <TextBlock Text="{Binding Config.Name}" />
+        <Grid 
+            x:Name="root"
+            Background="Transparent"
+            Height="{StaticResource Sizes.Control.Large}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+
+            <e:SymbolMaterial
+                x:Name="iconWarning"
+                Grid.Column="0"
+                Grid.Row="0"
+                Grid.RowSpan="2"
+                FontSize="24"
+                Margin="8 0 0 0"
+                VerticalAlignment="Center"
+                Visibility="Collapsed"
+                Foreground="{StaticResource Brush.Danger}"
+                Icon="Warning" />
+
+            <TextBlock 
+                Grid.Column="1"
+                Grid.Row="0"
+                Text="{Binding Config.Name}" 
+                Margin="8 0 0 0"
+                FontSize="16"
+                VerticalAlignment="Center"/>
+
+            <TextBlock 
+                x:Name="tbWarning"
+                Grid.Column="1"
+                Grid.Row="1"
+                Visibility="Collapsed"
+                Margin="8 0 0 2"
+                Foreground="{StaticResource Brush.Danger}"
+                Text="Command is not enabled." />
+
+            <StackPanel 
+                Grid.Column="2"
+                Grid.Row="0"
+                Grid.RowSpan="2"
+                Orientation="Horizontal">
+                <Button
+                    Style="{StaticResource Button.Primary}"
+                    ToolTip="Configure">
+                    <e:SymbolMaterial 
+                        FontSize="24"
+                        Icon="Tune"/>
+                </Button>
+                <Button
+                    VerticalAlignment="Stretch"
+                    Style="{StaticResource Button.Danger}"
+                    ToolTip="Remove">
+                    <e:SymbolMaterial
+                        FontSize="24"
+                        Icon="DeleteForever" />
+                </Button>
+            </StackPanel>
+        </Grid>
+        <DataTemplate.Triggers>
+            <Trigger Property="Control.IsMouseOver" Value="True">
+                <Setter TargetName="root" Property="Background" Value="{StaticResource Brush.Grey.37}" />
+            </Trigger>
+            <DataTrigger Binding="{Binding IsWorking}" Value="False">
+                <Setter TargetName="iconWarning" Property="Visibility" Value="Visible" />
+                <Setter TargetName="tbWarning" Property="Visibility" Value="Visible" />
+                <Setter TargetName="tbWarning" Property="Text" Value="Another manipulation with same name is bound." />
+                <Setter TargetName="iconWarning" Property="ToolTip" Value="Another manipulation with same name is bound." />
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Config.IsEnabled}" Value="False">
+                <Setter TargetName="iconWarning" Property="Visibility" Value="Visible" />
+                <Setter TargetName="tbWarning" Property="Visibility" Value="Visible" />
+                <Setter TargetName="tbWarning" Property="Text" Value="Command is not enabled." />
+                <Setter TargetName="iconWarning" Property="ToolTip" Value="Command is not enabled." />
+            </DataTrigger>
+        </DataTemplate.Triggers>
     </DataTemplate>
 
     <ControlTemplate TargetType="v:CommandsPageView" x:Key="CommandsPageView.Template">
@@ -45,8 +126,9 @@
                 <Button 
                     Grid.Row="2"
                     Style="{StaticResource Button.Primary}"
-                    Height="40"
-                    Content="Add command..."
+                    Height="{StaticResource Sizes.Control.Large}"
+                    FontSize="16"
+                    Content="Add command ..."
                     HorizontalAlignment="Right"
                     Margin="0 8 0 0"
                     />
